# discoweb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/discoweb/: __init__.py
src/discoweb/core/: client.py  errors.py  objects.py
