[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discoweb"
description = "Make webhooks on Discord simpler for ALL"
authors = [{name = "happycappa", email = "280617573+happycappa@users.noreply.github.com"}]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests<=2.34.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
