[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/happycappa/discoweb"
Source = "https://github.com/happycappa/discoweb/tree/main/src/discoweb"
Issues = "https://github.com/happycappa/discoweb/issues"

[project]
name = "discoweb"
description = "Make webhooks on Discord simpler for all!"
authors = [{name = "happycappa", email = "280617573+happycappa@users.noreply.github.com"}]
version = "0.1.3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
    "pytest"
]